--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>빙그레</title>
+    <link rel="stylesheet" href="style%20.css">
+    <link rel="stylesheet" href="slick.css">
+    <link rel="stylesheet" href="bxslider/dist/jquery.bxslider.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+    <link rel="stylesheet" href="swiper.css">
+    <link rel="stylesheet" href="swiper.min.css">
+    <link rel="stylesheet" href="common.css">
+    
     <script src="jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
     <script src="slick.js"></script>
-    <link rel="stylesheet" href="style%20.css">
-    <link rel="stylesheet" href="slick.css">
     <script src="bxslider/dist/jquery.bxslider.min.js"></script>
-    <link rel="stylesheet" href="bxslider/dist/jquery.bxslider.css">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="swiper.js"></script>
+    <script src="swiper.min.js"></script>
     <script>
         $(document).ready(function() {
             AOS.init()
@@ -40,7 +46,7 @@
                                 </ul>
                             </div>
                             <div>
-                                <a href="#">제품 소개</a>
+                                <a href="sub/sub1.html">제품 소개</a>
                                 <ul class="sub">
                                     <li><a href="#">아이스크림</a></li>
                                     <li><a href="#">우유</a></li>
@@ -99,50 +105,54 @@
             <div class="box">
                 <div class="img-box">
                     <div class="tit">
-                        <h3>인기상품</h3>
+                        <h2>인기상품</h2>
                     </div>
                     <div class="items">
                         <div class="item">
-                            <div class="pic">
-                                <img src="img/banana1.png" alt="">
-                            </div>
-                            <div class="txt">
-                                <div>바나나맛 우유</div>
-                                <p>No.1바나나 우유</p>
-                            </div>
+                            <a href="https://www.bing.co.kr/product/detail?PDT=123" target="_blank">
+                                <div class="pic pic1">
+                                    <img src="img/sec1-img-1.png" alt="">
+                                </div>
+                                <div class="txt">
+                                    <div>바나나맛 우유</div>
+                                    <p>No.1바나나 우유</p>
+                                </div>
+                            </a>
                         </div>
                         <div class="item">
-                            <div class="pic">
-                                <img src="img/togeter1.png" alt="">
-                            </div>
-                            <div class="txt">
-                                <div>투게더</div>
-                                <p>대한민국 대표 아이스크림</p>
-                            </div>
+                            <a href="https://www.bing.co.kr/product/detail?PDT=1" target="_blank">
+                                <div class="pic">
+                                    <img src="img/sec1-img-2.png" alt="">
+                                </div>
+                                <div class="txt">
+                                    <div>투게더</div>
+                                    <p>대한민국 대표 아이스크림</p>
+                                </div>
+                            </a>
                         </div>
                         <div class="item">
-                            <div class="pic">
-                                <img src="img/icecream.png" alt="">
-                            </div>
-                            <div class="txt">
-                                <div>붕어싸만코</div>
-                                <p>붕어 모양의 팥 아이스크림</p>
-                            </div>
+                            <a href="https://www.bing.co.kr/product/detail?PDT=17" target="_blank">
+                                <div class="pic">
+                                    <img src="img/sec1-img-3.png" alt="">
+                                </div>
+                                <div class="txt">
+                                    <div>붕어싸만코</div>
+                                    <p>붕어 모양의 팥 아이스크림</p>
+                                </div>
+                            </a>
                         </div>
                         <div class="item">
-                            <div class="pic">
-                                <img src="img/Yoplait1.png" alt="">
-                            </div>
-                            <div class="txt">
-                                <div>요플레</div>
-                                <p>39년 전통의 요플레</p>
-                            </div>
+                            <a href="https://www.bing.co.kr/product/detail?PDT=38" target="_blank">
+                                <div class="pic">
+                                    <img src="img/sec1-img-4.png" alt="">
+                                </div>
+                                <div class="txt">
+                                    <div>요플레</div>
+                                    <p>39년 전통의 요플레</p>
+                                </div>
+                            </a>
                         </div>
-
                     </div>
-                </div>
-                <div class="video-box">
-                    <video src="img/mv1.mp4" controls autoplay muted loop preload="auto"></video>
                 </div>
             </div>
         </div>
@@ -150,7 +160,7 @@
         <div class="section2">
 			<div class="contain">
 				<div class="tit">
-					<h3>50년 전통이 담긴 빙그레의 맛 여러분에게 소개 합니다</h3>
+					<h2>50년 전통이 담긴 빙그레의 맛 여러분에게 소개 합니다</h2>
 					<p>SINCE 1974~</p>
 				</div>	
 				<div class="tab-cnt">
@@ -270,6 +280,41 @@
 				</div>
 			</div>
         </div>
+
+        <div class="section3">
+            <h2>빙그레의 새소식을 전합니다!</h2>
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="item">
+                            <img src="img/sec3-img-1.png" alt="">
+                            <div>빙그레 공식 인스타그램 OPEN!</div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item">
+                            <img src="img/sec3-img-2.jpg" alt="">
+                            <div>빙그레 슈퍼콘 모델로 손흥민 발탁!</div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item">
+                            <img src="img/sec3-img-3.jpeg" alt="">
+                            <div>빙그레 따옴체 무료 배포</div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item">
+                            <img src="img/sec3-img-4.jpg" alt="">
+                            <div>빙그레 달콤한 필터 "단지캠" 출시</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
    
     <footer>
         <ul class="align">
@@ -291,24 +336,4 @@
         </div>
     </footer>
     </div>
-	<script>
-		jQuery(document).ready(function(){
-			jQuery(".tab-cnt .tab-content").hide();
-			jQuery(".tab-cnt ul.tabs>li:first").addClass("active").show(); 	
-			jQuery(".tab-cnt .tab-content:first").show();
-
-			jQuery(".tab-cnt ul.tabs>li").click(function(e) {
-				e.preventDefault();
-
-				jQuery(".tab-cnt ul.tabs>li").removeClass("active");
-				jQuery(this).addClass("active");
-				jQuery(".tab-cnt .tab-content").hide();		
-				
-				var activeTab = jQuery(this).find("a").attr("href");
-				jQuery(activeTab).show();
-				return false;
-			});
-		}); 
-	</script>
-
-</body></html>
+</html>
