--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         </div>
                         <div class="item">
                             <a href="https://www.bing.co.kr/product/detail?PDT=17" target="_blank">
-                                <div class="pic">
+                                <div class="pic pic2">
                                     <img src="img/sec1-img-3.png" alt="">
                                 </div>
                                 <div class="txt">
